tests/snapshots/examples_fixtures/diagnostics__hint_demos__fn_keyword_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/hint_demos/fn_keyword_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
