tests/snapshots/examples_fixtures/diagnostics__hint_demos__inline_suggestion_demo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/hint_demos/inline_suggestion_demo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
