tests/snapshots/examples_fixtures/diagnostics__hint_demos__shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/hint_demos/shadowing_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
