tests/snapshots/examples_fixtures/diagnostics__hint_demos__test_suggestion.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/hint_demos/test_suggestion.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
